@@ -28,6 +28,15 @@ Changes with Apache 2.3.6
      processing is completed, avoiding orphaned callback pointers.
      [Brett Gervasoni <brettg senseofsecurity.com>, Jeff Trawick]
 
+  *) core: Add per-module and per-directory loglevel configuration.
+           Add some more trace logging.
+     mod_rewrite: Replace RewriteLog/RewriteLogLevel with trace log levels.
+     mod_ssl: Replace LogLevelDebugDump with trace log levels.
+     mod_ssl/mod_proxy*: Adjust loglevels to be less verbose at levels info
+           and debug.
+     mod_dumpio:  Replace DumpIOLogLevel with trace log levels.
+     [Stefan Fritsch]
+
   *) mod_ldap: LDAP caching was suppressed (and ldap-status handler returns 
      title page only) when any mod_ldap directives were used in VirtualHost 
      context.  [Eric Covener]
